// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`costItemsActions should match add filtered actions snapshot 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "category": "CLOTHING",
        "comment": "this is a comment",
        "cost": 1000,
      },
      Object {
        "category": "RENT",
        "comment": "this is a comment",
        "cost": 1500,
      },
      Object {
        "category": "FOOD",
        "comment": "this is a comment",
        "cost": 2000,
      },
    ],
    "type": "ADD_COST_ITEM",
  },
]
`;

exports[`costItemsActions should match the add cost actions snapshot 1`] = `
Array [
  Object {
    "payload": Object {
      "category": "CLOTHING",
      "comment": "this is a comment",
      "cost": 1000,
    },
    "type": "ADD_COST_ITEM",
  },
]
`;
